--- a/stylesheets/lobby.css
+++ b/stylesheets/lobby.css
@@ -139,3 +139,17 @@
     font-size: 18;
     -fx-text-fill: white;
 }
+
+.ingame {
+    -fx-background-color: #ffffff;
+    background-color: #ffffff;
+}
+
+.gametext {
+    -fx-margin: -10px;
+    margin: -10px;
+    -fx-font-size: 12;
+    font-size: 12;
+    -fx-font-weight: 800;
+    font-weight: 800;
+}
